(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags -la 2)
)


(include_subdirs unqualified)

(library
 (name lix)
 (libraries
  core
  str
  ctypes.foreign
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.target
  llvm.scalar_opts)
 (preprocess 
  (pps 
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))